<resources>

    <!--  Specs  -->
    <string name="brandName">TicketQuery</string>
    <string name="appVersion">1.0.0</string>
    <string name="appAuthor">Jacob Paulin</string>

    <!--  Drawer Menu  -->
    <string name="menuDrawer_navigation">Navigation</string>
    <string name="menuDrawer_home">Home</string>
    <string name="menuDrawer_favorites">Favorites</string>
    <string name="menuDrawer_search">Search</string>
    <string name="menuDrawer_miscellaneous">Miscellaneous</string>
    <string name="menuDrawer_help">Help</string>
    <string name="menuDrawer_about">About</string>

    <!--  Toolbar Menu  -->
    <string name="menuToolbar_home">Home</string>

    <!--  Alert Dialogs  -->
    <string name="alertDialog_appInfo_title">App Info</string>
    <string name="alertDialog_appInfo_message">Here is some information about the app. %n%nCurrent Activity: %s%nApp Author: %s%nApp Version: %s</string>
    <string name="alertDialog_noFavorites_title">No Events Saved!</string>
    <string name="alertDialog_noFavorites_message">There are no events saved in your favorites, try searching for one first!</string>
    <string name="alertDialog_activityFavorites_helpTitle">Help Page: Favorites</string>
    <string name="alertDialog_activityFavorites_helpMessage">The favorites page will show you each of the events you have saved to your favorites list.%n%nTo view more details about a event click on the event.</string>
    <string name="alertDialog_activityHome_helpTitle">Help Page: Home</string>
    <string name="alertDialog_activityHome_helpMessage">Start by choosing one of our 2 option, search or favorites.%n%nSearch option will bring you to a page where you can search for events and then view more details about them.%n%nFavorites option will bring you to a page where you can view all of your saved events.</string>
    <string name="alertDialog_activitySearch_helpTitle">Help Page: Search</string>
    <string name="alertDialog_activitySearch_helpMessage">The search page allows you to search for events based off of a city and radius.%n%nEnter a city in the city box and a number radius in the radius box, then push the search button and scroll the list of events.%n%nOnce you see an event that interests you click on the event to see more details about that event.</string>

    <!--  Search Bar  -->
    <string name="searchBar_editText_city_hint">Search for city…</string>
    <string name="searchBar_editText_radius_hint">Max search radius…</string>
    <string name="searchBar_searchButton">Search</string>

    <!--  Home Page  -->
    <string name="activityHome_searchButton_description">Search and find the \nperfect event for you!</string>
    <string name="activityHome_searchButton_buttonLabel">Go To Search</string>
    <string name="activityHome_favoriteButton_description">View your saved events!</string>
    <string name="activityHome_favoriteButton_buttonLabel">Go To Favorites</string>

    <!--  Miscellaneous  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Messages  -->
    <string name="message_invalidSearchInput">Invalid input in the following fields: </string>
    <string name="message_addedToFavorites">Event Added To Favorites List</string>
    <string name="message_removedFromFavorites">Event Removed From Favorites List</string>

    <!--  Fragment Event Details  -->
    <string name="fragment_eventDetails_url">Go To Site</string>
    <string name="fragment_eventDetails_favoriteAdd">Add To Favorites</string>
    <string name="fragment_eventDetails_favoriteRemove">Remove From Favorites</string>

    <!--  Fragment Favorite Event Details  -->
    <string name="fragment_favoriteEventDetails_url">Go To Site</string>
    <string name="fragment_favoriteEventDetails_favoriteRemove">Remove From Favorites</string>

    <!--  Fragment Favorite Event List Item  -->
    <string name="favoriteEventListItem_button_remove">Remove From Favorites</string>

    <!--  WORDS  -->
    <string name="blank" />
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="activity">activity</string>
    <string name="author">author</string>
    <string name="version">version</string>
    <string name="search">search</string>
    <string name="city">city</string>
    <string name="radius">radius</string>
    <string name="permission">permission</string>
    <string name="granted">granted</string>
    <string name="denied">denied</string>
    <string name="location">location</string>
    <string name="fine">fine</string>
    <string name="coarse">coarse</string>

</resources>