<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menuDrawer_navigation">
        <menu>
            <item
                android:id="@+id/menuDrawer_home"
                android:icon="@drawable/home_icon_24_dark"
                android:orderInCategory="100"
                android:title="@string/menuDrawer_home" />

<!--            <item-->
<!--                android:id="@+id/menuDrawer_search"-->
<!--                android:icon="@drawable/search_icon_50"-->
<!--                android:orderInCategory="200"-->
<!--                android:title="@string/menuDrawer_search" />-->

            <item
                android:id="@+id/menuDrawer_favorites"
                android:icon="@drawable/heart_icon_30_dark"
                android:orderInCategory="300"
                android:title="@string/menuDrawer_favorites" />
        </menu>
    </item>

    <item android:title="@string/menuDrawer_miscellaneous">
        <menu>
            <item
                android:id="@+id/menuDrawer_help"
                android:icon="@drawable/questionmark_icon_50_dark"
                android:orderInCategory="100"
                android:title="@string/menuDrawer_help" />
        </menu>
    </item>

    <item android:title="@string/menuDrawer_about">
        <menu>
            <item
                android:id="@+id/menuDrawer_activity"
                android:orderInCategory="100"
                android:title="@string/activity" />

            <item
                android:id="@+id/menuDrawer_author"
                android:orderInCategory="200"
                android:title="@string/author"
                />

            <item
                android:id="@+id/menuDrawer_version"
                android:orderInCategory="300"
                android:title="@string/version"
                />
        </menu>
    </item>

</menu>